fixing the out-of-flow issues created by the grid's gap property

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 /* Global styles for this component */
 ul, ol, li {
   list-style: none;
-  /* margin: 0;
-  padding: 0; */
 }
 
 input:focus,
@@ -35,13 +33,6 @@ img {
   align-items: center;
   justify-content: center;
   background-color: #7B43D6;
-
-  overflow-y: scroll;
-  padding: 2%;
-
-  /* padding-bottom: 8%; */
-
-
 }
 
 /* Styles for the Filterable Galery Component Ends*/
@@ -69,7 +60,6 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
 .results-msg-container_msg {
@@ -77,7 +67,3 @@ main {
 }
 
 /* Styles for the Main part ENDS*/
-
-
-/* .card-list {
-} */
