--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,8 @@
   
   body {
     width: 100vw;
-    /* height: 100vh; */
   }
 
   #root {
     width: 100%;
-    height: 100%;
   }
